finish tours+fix visible

--- a/scss/common/static.scss
+++ b/scss/common/static.scss
@@ -61,6 +61,11 @@
         color: $zero;
         margin-bottom: 60px;
     }
+    &__subtitle2 {
+        font-weight: 500;
+        font-size: 28px;
+        color: $zero;
+    }
     &__subtitle {
         font-weight: 500;
         font-size: 24px;
